    analysis code (Issue #743)
  * Added ProgressMeter to 'transfer_to_memory' function, to show progress
    of loading trajectory to memory (Issue #1028 and PR #1055).
  * Selecting atoms by resid now respects icodes if they were present. Ie
    select_atoms('resid 163A') works! (Issue #839 PR #1066)
  * Added ability to read MMTF format files (#907 PR #1069)
  * Added coordinates.null.NullWriter, which behaves like a Writer but
    ignores all input; useful for suppressing output.

Fixes
  * Removed MDAnalysis.analysis.PDBToBinaryTraj (Issue #1035)
  * MDAnalysis.analysis.distances.between() is no longer broken
  * GROWriter resids now truncated properly (Issue #886)
  * reading/writing lambda value in trr files (Issue #859)
  * fix __iter__/next redundancy (Issue #869)
  * SingleFrameReader now raises StopIteration instead of IOError on calling
    next (Issue #869)
  * Display of Deprecation warnings doesn't affect other modules anymore (Issue #754)
  * Changed nframes to n_frames in analysis modules for consistency (Issue #890)
  * fixed incompatibility with newer matplotlib in analysis.hole
  * Fixed modules that improperly documented and/or used frame slicing
    defaults (#914)
  * Fixed same interRDF can be run twice (Issue #924)
  * Support for TPR files produced by Gromacs-2016 (Issue #932)
  * Fixed parsing PDB files with CONECT records to TER entries (Issue #936)
  * Fixed parsing PDB files with single entry in CONECT record (Issue #937)
  * Progress meters are now displayed as expected on jupyter notebooks
    (Issue #927)
  * Reset trajectory to 0 after sliced iteration (Issue #1031)
  * Fixed rotaxis returning NaN if a=b (Issue #1045)
  * Fixed align_principal_axis onto a principal axes (Issue #1045)

Changes
  * Started unifying the API of analysis classes (named internally
    "Bauhaus" style; see Issue #719)
  * Added protected variable _frame_index to to keep track of frame iteration
    number in AnalysisBase